test/end-to-end/compile-errors/assert-or-forbid-warnings.crow
main void()
	assert true : throw divide-by-0
	guard true : throw divide-by-0
